- 0.12.3.1 (2018-01-10)
    * Bump CHANGELOG with IPv6 warning
    * Run all autobahn tests during CI

- 0.12.3.0 (2018-01-02)
    * Fix error thrown from runClient functions
    * Bump `QuickCheck` dependency to 2.10
    * Bump `entropy` dependency to 0.4
    * Bump `binary` dependency to 0.10

- 0.12.2.0 (2017-07-28)
    * Don't use LambdaCase, we want to support older GHC versions

- 0.12.1.0 (2017-07-22)
    * Fix Monoid import on older base versions
    * Increase lower bound on `binary` to 0.8.1 (by Jonathan Daugherty)

- 0.12.0.0
    * Add limit options for frame and message size to prevent against (D)DoS
      attacks
    * Fix space leak in encodeMessages (by Roman Borschel)
    * Stricter frame/encoding decoding for ping/close frames (by Lars Petersen)

- 0.11.2.0
    * Fix 0-width reason phrase parsing
    * Change receive buffer from 1024 to 8192 bytes (by Ondrej Palkovsky)
    * Implement fast masking in C (by Ondrej Palkovsky and myself)
    * Some haddock improvements
    * Bump `HUnit` dependency to 1.6

- 0.11.1.0
    * Fix compilation issue with GHC-7.8

- 0.11.0.0
    * Support for IPv6 in the built-in server, client and tests (by agentm).
      This can cause issues on backends that do not enable IPv6.  For more
      information and a workaround, see this issue:
      <https://github.com/jaspervdj/websockets/issues/140#issuecomment-296732964>.
    * Faster masking (by Dmitry Ivanov)
    * Support for `permessage-deflate` extension (by Marcin Tolysz)
    * Strict unicode checking and proper extension mechanism

- 0.10.0.0
    * Fix client specifying empty path
    * Allow sending collections of messages (by David Turner)
    * Allow sending extra headers when accepting request (by James Deery)

- 0.9.8.2
    * Bump `HUnit` dependency to 1.5

- 0.9.8.1
    * Restore state of the package to version `0.9.7.0`

- 0.9.8.0
    * This release contained a feature which broke backwards-compatibility.