@@ -83,8 +83,7 @@ Library
     base              >= 4.4    && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
-    bytestring        >= 0.9    && < 0.11,
+    bytestring        >= 0.10.4 && < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -140,8 +139,7 @@ Test-suite websockets-tests
     base              >= 4      && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
-    bytestring        >= 0.9    && < 0.11,
+    bytestring        >= 0.10.4 && < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -166,8 +164,7 @@ Executable websockets-example
     base              >= 4      && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
-    bytestring        >= 0.9    && < 0.11,
+    bytestring        >= 0.10.4 && < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -194,8 +191,7 @@ Executable websockets-autobahn
     base              >= 4      && < 5,
     base64-bytestring >= 0.1    && < 1.1,
     binary            >= 0.8.1  && < 0.10,
-    blaze-builder     >= 0.3    && < 0.5,
-    bytestring        >= 0.9    && < 0.11,
+    bytestring        >= 0.10.4 && < 0.11,
     case-insensitive  >= 0.3    && < 1.3,
     containers        >= 0.3    && < 0.6,
     network           >= 2.3    && < 2.7,
@@ -220,8 +216,7 @@ Benchmark bench-mask
         base              >= 4      && < 5,
         base64-bytestring >= 0.1    && < 1.1,
         binary            >= 0.8.1  && < 0.10,
-        blaze-builder     >= 0.3    && < 0.5,
-        bytestring        >= 0.9    && < 0.11,
+        bytestring        >= 0.10.4 && < 0.11,
         case-insensitive  >= 0.3    && < 1.3,
         containers        >= 0.3    && < 0.6,
         network           >= 2.3    && < 2.7,
